--- a/src/styles/site/site.css
+++ b/src/styles/site/site.css
@@ -57,7 +57,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 
     /* padding-top: var(--bsu); */
   }
